--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="src/assets/css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>高考志愿推荐系统</title>
+    <title>康复护理机器人信任度评估系统</title>
   </head>
 
   <body>
